fix: bg and color for dark mode

--- a/app/globals.css
+++ b/app/globals.css
@@ -37,8 +37,8 @@
 
   @media (prefers-color-scheme: dark) {
     :root {
-      --background: 240 10% 3.9%;
-      --foreground: 0 0% 98%;
+      --background: 0 0% 9%;
+      --foreground: 0 0% 100%;
 
       --card: 240 10% 3.9%;
       --card-foreground: 0 0% 98%;
